--- a/style.css
+++ b/style.css
@@ -11,10 +11,14 @@
 	--thematic-blue: #1992d4;
 }
 
+*,
+*::before,
+*::after {
+	box-sizing: border-box;
+}
+
 * {
 	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
 }
 
 html {
@@ -22,6 +26,7 @@ html {
 }
 
 body {
+	line-height: 1.5;
 	min-height: 100%;
 	border: 1px solid purple;
 	font-family: "keep-calm", sans-serif;
@@ -163,12 +168,13 @@ ul {
 }
 
 .main-content {
+	font-size: 1rem;
 	grid-area: main;
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
 	grid-template-rows: repeat(6, 115px);
-	padding: 4em 1em;
-	gap: 1em;
+	padding: 4em 2em;
+	gap: 2em;
 
 	.projects {
 		display: contents;
@@ -181,29 +187,30 @@ ul {
 
 		.cards {
 			display: contents;
-			> div {
-				grid-row: span 2;
-			}
 		}
 	}
 
 	.announcements {
-		border: 1px solid red;
 		grid-column: 3;
 		grid-row: 1 / span 3;
-		background-color: #fff;
-		padding: 2em 2em;
+		display: flex;
 
 		h2 {
 			position: absolute;
-			margin-top: -4em;
-			margin-left: -1em;
+			margin-top: -2em;
 		}
 
 		ul {
 			display: flex;
 			flex-direction: column;
-			gap: 1em;
+			flex: 1 1 auto;
+			justify-content: space-between;
+
+			padding: 1.5em 2em;
+			background-color: #fff;
+			border-radius: 1.4em;
+			box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px,
+				rgba(0, 0, 0, 0.23) 0px 3px 6px;
 		}
 
 		li {
@@ -217,31 +224,33 @@ ul {
 	}
 
 	.trending {
-		border: 1px solid red;
+		display: flex;
 		grid-column: 3;
 		grid-row: 4 / span 3;
-
-		> div {
-			background-color: #fff;
-			padding: 2em 2em;
-		}
+		flex-direction: column;
+		gap: 0.8em;
 
 		ul {
 			display: flex;
+			flex: 1 1 min-content;
 			flex-direction: column;
+			justify-content: space-between;
+
+			background-color: #fff;
+			padding: 2em 2em;
 			gap: 1em;
+			border-radius: 1.4em;
+			box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px,
+				rgba(0, 0, 0, 0.23) 0px 3px 6px;
 		}
 
 		li {
-			border-bottom: 1px solid grey;
-			padding: 1em 0;
+			display: flex;
+			gap: 1em;
+			align-items: center;
 
-			p {
-				font-size: 0.6em;
-			}
-
-			&:last-of-type {
-				border-bottom-width: 0;
+			> div:last-child {
+				/* display: flex; */
 			}
 		}
 	}
@@ -268,6 +277,7 @@ input:valid ~ span::after {
 }
 
 .card {
+	grid-row: span 2;
 	display: flex;
 	flex-direction: column;
 	flex: 1 1 auto;
