--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ ul {
 	display: grid;
 	grid-template-columns: 3fr 11fr;
 	grid-template-areas: "sidebar header" "sidebar main";
-	grid-template-rows: 3fr 14fr;
+	grid-template-rows: 1fr 8fr;
 	min-height: 100%;
 }
 
@@ -173,6 +173,7 @@ ul {
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
 	grid-template-rows: repeat(6, 115px);
+	grid-auto-rows: 115px;
 	padding: 4em 2em;
 	gap: 2em;
 
@@ -217,6 +218,13 @@ ul {
 			border-bottom: 1px solid grey;
 			padding: 1em 0;
 
+			p {
+				display: -webkit-box;
+				-webkit-box-orient: vertical;
+				-webkit-line-clamp: 3;
+				overflow: hidden;
+			}
+
 			&:last-of-type {
 				border-bottom-width: 0;
 			}
@@ -249,8 +257,11 @@ ul {
 			gap: 1em;
 			align-items: center;
 
-			> div:last-child {
-				/* display: flex; */
+			p {
+				display: -webkit-box;
+				-webkit-box-orient: vertical;
+				-webkit-line-clamp: 2;
+				overflow: hidden;
 			}
 		}
 	}
@@ -280,13 +291,20 @@ input:valid ~ span::after {
 	grid-row: span 2;
 	display: flex;
 	flex-direction: column;
+	justify-content: space-between;
 	flex: 1 1 auto;
 	background-color: white;
 	border-left: 9px solid #f0b42a;
 	border-radius: 8px;
 	box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 	padding: 2em 1em;
-	gap: 1em;
+
+	p {
+		display: -webkit-box;
+		-webkit-box-orient: vertical;
+		-webkit-line-clamp: 4;
+		overflow: hidden;
+	}
 
 	> ul {
 		display: flex;
