--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@
 
 :root {
 	--thematic-blue: #1992d4;
+	--card-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px,
+		rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
 
 *,
@@ -40,6 +42,7 @@ a {
 
 ul {
 	list-style: none;
+	padding: 0;
 }
 
 .container {
@@ -57,7 +60,7 @@ ul {
 	font-size: 1rem;
 	padding: 1.8em;
 	display: grid;
-	gap: 5em;
+	gap: 4em;
 	grid-template-rows: repeat(3, min-content);
 
 	> div:first-of-type {
@@ -67,21 +70,26 @@ ul {
 	}
 
 	h1 {
-		font-size: 2.2em;
+		font-size: 1.8em;
+		margin-bottom: -0.2em;
 	}
 
 	ul {
-		font-size: 1.7em;
+		font-size: 1.4em;
 		font-weight: bold;
 		display: flex;
 		flex-direction: column;
-		gap: 1em;
+		gap: 1.4em;
 	}
 
 	li {
 		display: flex;
 		gap: 1em;
 		align-items: center;
+
+		a {
+			margin-bottom: -0.3em;
+		}
 	}
 }
 
@@ -89,6 +97,7 @@ ul {
 	grid-area: header;
 	background-color: #fff;
 	font-size: 1rem;
+	box-shadow: var(--card-shadow);
 
 	display: grid;
 	grid-template-columns: 8fr 2fr;
@@ -210,8 +219,7 @@ ul {
 			padding: 1.5em 2em;
 			background-color: #fff;
 			border-radius: 1.4em;
-			box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px,
-				rgba(0, 0, 0, 0.23) 0px 3px 6px;
+			box-shadow: var(--card-shadow);
 		}
 
 		li {
@@ -248,8 +256,7 @@ ul {
 			padding: 2em 2em;
 			gap: 1em;
 			border-radius: 1.4em;
-			box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px,
-				rgba(0, 0, 0, 0.23) 0px 3px 6px;
+			box-shadow: var(--card-shadow);
 		}
 
 		li {
@@ -296,7 +303,7 @@ input:valid ~ span::after {
 	background-color: white;
 	border-left: 9px solid #f0b42a;
 	border-radius: 8px;
-	box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+	box-shadow: var(--card-shadow);
 	padding: 2em 1em;
 
 	p {
