--- a/style.css
+++ b/style.css
@@ -10,8 +10,6 @@
 :root {
 	--thematic-blue: #1992d4;
 	--card-shadow: rgba(0, 0, 0, 0.15) 0px 3px 3px 0px;
-	/* --card-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px,
-		rgba(0, 0, 0, 0.23) 0px 3px 6px; */
 }
 
 *,
@@ -35,6 +33,8 @@ body {
 	font-family: "keep-calm", sans-serif;
 	background-color: #e2e8f0;
 	display: flex;
+	min-width: 100%;
+	flex: 1 1 auto;
 }
 a {
 	text-decoration: none;
@@ -50,8 +50,10 @@ ul {
 	display: grid;
 	grid-template-columns: 3fr 11fr;
 	grid-template-areas: "sidebar header" "sidebar main";
-	grid-template-rows: 1fr 8.5fr;
-	min-height: 100%;
+
+	@media (max-width: 1100px) {
+		grid-template-columns: min-content 1fr;
+	}
 }
 
 .sidebar {
@@ -103,6 +105,10 @@ ul {
 	grid-template-columns: 8fr 2fr;
 	padding: 1.6em 4.2em 1em 3em;
 	gap: 2.5em 1em;
+
+	@media (max-width: 1100px) {
+		grid-template-columns: 1fr;
+	}
 
 	.search-container {
 		display: flex;
@@ -200,6 +206,16 @@ ul {
 	padding: 4.7em 1.4em 4em;
 	gap: 2em 1.5em;
 
+	@media (max-width: 1250px) {
+		grid-template-columns: 1fr 0.73fr;
+		grid-template-rows: repeat(6, 95px);
+	}
+
+	@media (max-width: 1100px) {
+		grid-template-columns: 1fr;
+		grid-template-rows: repeat(6, 95px);
+	}
+
 	.projects {
 		display: contents;
 		position: relative;
@@ -219,6 +235,18 @@ ul {
 		grid-column: 3;
 		grid-row: 1 / span 3;
 		display: flex;
+
+		@media (max-width: 1250px) {
+			grid-column: 2;
+			grid-row: 1 / span 3;
+		}
+
+		@media (max-width: 1100px) {
+			grid-column: unset;
+			grid-row: span 3;
+
+			border: 1px solid red;
+		}
 
 		h2 {
 			position: absolute;
@@ -260,6 +288,16 @@ ul {
 		grid-row: 4 / span 3;
 		flex-direction: column;
 		gap: 0.8em;
+
+		@media (max-width: 1250px) {
+			grid-column: 2;
+			grid-row: 4 / span 3;
+		}
+
+		@media (max-width: 1100px) {
+			grid-column: unset;
+			grid-row: span 3;
+		}
 
 		h2 {
 			font-size: 1.1em;
@@ -304,9 +342,9 @@ ul {
 .card {
 	grid-row: span 2;
 	display: flex;
+	flex: 1 1 auto;
 	flex-direction: column;
 	justify-content: space-between;
-	flex: 1 1 auto;
 	background-color: white;
 	border-left: 0.45em solid #f0b42a;
 	border-radius: 8px;
