--- a/style.css
+++ b/style.css
@@ -29,7 +29,6 @@ html {
 body {
 	line-height: 1.5;
 	min-height: 100%;
-	border: 1px solid purple;
 	font-family: "keep-calm", sans-serif;
 	background-color: #e2e8f0;
 	display: flex;
@@ -206,8 +205,8 @@ ul {
 	padding: 4.7em 1.4em 4em;
 	gap: 2em 1.5em;
 
-	@media (max-width: 1250px) {
-		grid-template-columns: 1fr 0.73fr;
+	@media (max-width: 1439px) {
+		grid-template-columns: 1fr 1fr;
 		grid-template-rows: repeat(6, 95px);
 	}
 
@@ -235,17 +234,11 @@ ul {
 		grid-column: 3;
 		grid-row: 1 / span 3;
 		display: flex;
+		position: relative;
 
-		@media (max-width: 1250px) {
+		@media (max-width: 1439px) {
 			grid-column: 2;
 			grid-row: 1 / span 3;
-		}
-
-		@media (max-width: 1100px) {
-			grid-column: unset;
-			grid-row: span 3;
-
-			border: 1px solid red;
 		}
 
 		h2 {
@@ -280,6 +273,18 @@ ul {
 				border-bottom-width: 0;
 			}
 		}
+
+		@media (max-width: 1100px) {
+			grid-column: unset;
+			grid-row: span 3;
+			flex-direction: column;
+			gap: 0.8em;
+
+			h2 {
+				position: relative;
+				margin-top: 0;
+			}
+		}
 	}
 
 	.trending {
@@ -289,7 +294,7 @@ ul {
 		flex-direction: column;
 		gap: 0.8em;
 
-		@media (max-width: 1250px) {
+		@media (max-width: 1439px) {
 			grid-column: 2;
 			grid-row: 4 / span 3;
 		}
