--- a/style.css
+++ b/style.css
@@ -26,6 +26,13 @@
 	--header-color: #e8e8e8;
 
 	--card-shadow: rgba(0, 0, 0, 0.15) 0px 3px 3px 0px;
+
+	--svg-yellow-filer: filter: invert(100%) sepia(38%) saturate(4432%) hue-rotate(328deg) brightness(119%) contrast(91%);
+
+	--main-header-text-size: 1.45em;
+
+	--card-header-size: 1.2em;
+	--card-text-color: #2a2a2a;
 }
 
 *,
@@ -93,6 +100,10 @@ ul {
 		margin-bottom: -0.2em;
 	}
 
+	img {
+		filter: invert(100%) sepia(38%) saturate(4432%) hue-rotate(328deg) brightness(119%) contrast(91%);
+	}
+
 	ul {
 		font-size: 1.4em;
 		font-weight: bold;
@@ -148,11 +159,12 @@ ul {
 			display: flex;
 			flex-grow: 1;
 			font-size: 1.2em;
-			background-color: #e2e8f0;
+			background-color: white;
 			height: 1.6em;
 			border-radius: 2em;
 			border: none;
 			padding: 0 0.8em;
+			box-shadow: var(--card-shadow);
 		}
 	}
 
@@ -219,10 +231,17 @@ ul {
 	grid-area: main;
 	display: grid;
 	grid-template-columns: 1fr 1fr 0.73fr;
-	grid-template-rows: repeat(6, 95px);
-	grid-auto-rows: 95px;
+	grid-template-rows: repeat(6, 105px);
+	grid-auto-rows: 105px;
 	padding: 4.7em 1.4em 4em;
 	gap: 2em 1.5em;
+	background: #ffffff;
+	background: linear-gradient(
+		135deg,
+		rgba(255, 255, 255, 1) 0%,
+		rgba(255, 238, 156, 1) 50%,
+		rgba(31, 31, 0, 1) 100%
+	);
 
 	@media (max-width: 1439px) {
 		grid-template-columns: 1fr 1fr;
@@ -241,7 +260,7 @@ ul {
 		h2 {
 			position: absolute;
 			margin-top: -2em;
-			font-size: 1.1em;
+			font-size: var(--main-header-text-size);
 			color: var(--main-header-color);
 		}
 
@@ -264,7 +283,7 @@ ul {
 		h2 {
 			position: absolute;
 			margin-top: -2em;
-			font-size: 1.1em;
+			font-size: var(--main-header-text-size);
 			color: var(--main-header-color);
 		}
 
@@ -274,26 +293,37 @@ ul {
 			flex: 1 1 auto;
 			justify-content: space-between;
 
-			padding: 1.5em 2em;
+			padding: 2.4em 2.2em;
 			border-radius: 0.8em;
 			box-shadow: var(--card-shadow);
 			background-color: var(--card-main-color);
 		}
 
+
 		li {
 			border-bottom: 1px solid grey;
+			padding-bottom: 1em;
+
+			h6 {
+				font-size: 1em;
+			}
 
 			p {
 				display: -webkit-box;
 				-webkit-box-orient: vertical;
 				-webkit-line-clamp: 3;
 				overflow: hidden;
+				font-size: 0.8em;
 			}
 
 			&:last-of-type {
 				border-bottom-width: 0;
+				padding-bottom: 0;
 			}
 		}
+
+	
+
 
 		@media (max-width: 1100px) {
 			grid-column: unset;
@@ -326,7 +356,7 @@ ul {
 		}
 
 		h2 {
-			font-size: 1.1em;
+			font-size: var(--main-header-text-size);
 			margin-top: 0.4em;
 			color: var(--main-header-color);
 		}
@@ -338,7 +368,7 @@ ul {
 			justify-content: space-between;
 
 			background-color: var(--card-main-color);
-			padding: 2em 2em;
+			padding: 1.8em 1.8em;
 			border-radius: 0.8em;
 			box-shadow: var(--card-shadow);
 		}
@@ -348,11 +378,17 @@ ul {
 			gap: 1em;
 			align-items: center;
 
+			h6 {
+				font-size:0.8em;
+			}
+
 			p {
 				display: -webkit-box;
 				-webkit-box-orient: vertical;
 				-webkit-line-clamp: 1;
 				overflow: hidden;
+				font-size: 1em;
+				letter-spacing: 0.05em;
 			}
 		}
 	}
@@ -361,9 +397,12 @@ ul {
 .img {
 	display: flex;
 	flex-shrink: 0;
-	height: 24px;
-	width: 24px;
-	border: 1px solid black;
+	min-height: 24px;
+	min-width: 24px;
+}
+
+.rounded {
+	border-radius: 100%;
 }
 
 .card {
@@ -376,13 +415,19 @@ ul {
 	border-left: 0.45em solid var(--card-border-color);
 	border-radius: 8px;
 	box-shadow: var(--card-shadow);
-	padding: 2.5em 1.6em;
+	padding: 2.2em 1.6em;
 	color: var(--card-text-color);
+	line-height: 1.2em;
+	text-wrap: pretty;
+
+	h5 {
+		font-size: var(--card-header-size);
+	}
 
 	p {
 		display: -webkit-box;
 		-webkit-box-orient: vertical;
-		-webkit-line-clamp: 4;
+		-webkit-line-clamp: 5;
 		overflow: hidden;
 	}
 
