--- a/style.css
+++ b/style.css
@@ -58,10 +58,7 @@ body {
 	min-width: 100%;
 	flex: 1 1 auto;
 }
-a {
-	text-decoration: none;
-	color: #fff;
-}
+
 
 ul {
 	list-style: none;
@@ -120,6 +117,7 @@ ul {
 		a {
 			margin-bottom: -0.3em;
 			color: var(--sidebar-text-color);
+			text-decoration: none;
 		}
 	}
 }
@@ -160,7 +158,7 @@ ul {
 			flex-grow: 1;
 			font-size: 1.2em;
 			background-color: white;
-			height: 1.6em;
+			height:2em;
 			border-radius: 2em;
 			border: none;
 			padding: 0 0.8em;
@@ -185,6 +183,11 @@ ul {
 		display: flex;
 		align-items: center;
 		gap: 2em;
+
+		a {
+			text-decoration: none;
+			color: black;
+		}
 
 		p:first-of-type {
 			font-size: 0.95em;
@@ -221,6 +224,7 @@ ul {
 			a {
 				margin-top: 20px;
 				color: var(--sidebar-text-color);
+				text-decoration: none;
 			}
 		}
 	}
